--- a/.github/workflows/ProgramCodeConvention.yml
+++ b/.github/workflows/ProgramCodeConvention.yml
@@ -18,4 +18,4 @@ jobs:
         run: npm install --save-dev --save-exact @biomejs/biome
 
       - name: Validate all js-file
-        run: npx @biomejs/biome check *.js
+        run: npx @biomejs/biome check .
